@@ -243,4 +243,7 @@
   <data name="WrongParameterName" xml:space="preserve">
     <value>Parameter '{0}' is not found but a parameter with the name '{1}' is found. Parameter names must include the leading parameter marker.</value>
   </data>
+  <data name="ReturnParameterExists" xml:space="preserve">
+    <value>A return value parameter already exists in the parameter collection.</value>
+  </data>
 </root>
