@@ -28,7 +28,8 @@ Version 1.0.9
          statements application-wide    
     A nicer exception is displayed if you have added a parameter without the parameter marker.
     Improved CommandBuilder.DeriveParameters to use the procedure cache if possible
-    
+    Return parameters created with DeriveParameters now have the name RETURN_VALUE
+      
 Version 1.0.8 RC
 
     Other changes
